objectimmo (name-stuff)

--- a/Resources/Private/Templates/RealtyManager/List.html
+++ b/Resources/Private/Templates/RealtyManager/List.html
@@ -2,5 +2,9 @@
       data-namespace-typo3-fluid="true">
 
 <h2>LIST OBJECTS</h2><br />
+
+<f:for each="{objects}" as="object">
+	{object.title}
+</f:for>
 	
 </html>
