clear something, js AssetCollector

--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -96,5 +96,7 @@
 		<f:form.submit class="f-submit" value="Suchen" />
 	</div>
 </f:form>
+
+<f:asset.script identifier="ajax_select" src="EXT:realty_manager/Resources/Public/JavaScript/Ajax.js" />
 	
 </html>
