add detail view

--- a/Resources/Private/Templates/RealtyManager/List.html
+++ b/Resources/Private/Templates/RealtyManager/List.html
@@ -6,7 +6,10 @@
 <f:for each="{objects}" as="object">
 <div class="row list-immo-row">
 	<div class="col-lg-9">
-		<span class="font-weight-bold">{object.title}</span><br />
+		<f:link.action action="detail" arguments="{objUid : object.uid}">
+		   <span class="font-weight-bold">{object.title}</span>
+		</f:link.action>
+		<br />
 		Wohnungstyp 
 		<div class="list-teaser">
 		   <f:format.html>{object.teaser}</f:format.html>
