--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -1,7 +1,7 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
-<f:form action="list" id="searchform" controller="RealtyManager">
+<f:form action="list" pageUid="15" id="searchform" controller="RealtyManager">
 	<div class="form-group">
 		<label for="city">Stadt</label>
 	    <f:form.select name="city"  class="form-control form-control-sm select-city" options="{cities}" optionValueField="key" optionLabelField="value" value="{city}" />
