--- a/Resources/Private/Templates/RealtyManager/Detail.html
+++ b/Resources/Private/Templates/RealtyManager/Detail.html
@@ -4,4 +4,6 @@
 <h2>Detailansicht Objektnummer: {object.objectNumber}</h2><br />
 <h4>{object.title}</h4>
 <p><f:format.html>{object.teaser}</f:format.html></p>
+<hr />
+<f:link.action class="btn btn-default btn-sm" action="list"><< zurück</f:link.action></p>
 </html>
