--- a/Resources/Private/Templates/RealtyManager/Detail.html
+++ b/Resources/Private/Templates/RealtyManager/Detail.html
@@ -35,11 +35,11 @@
 				</tr>
 				<tr>
 					<td class="w-50">Wohnform</td>
-					<td class="w-50"><n:housetype houseuid='{object.houseType}' /></td>
+					<td class="w-50"><n:houseType houseuid='{object.houseType}' /></td>
 				</tr>
 				<tr>
 					<td class="w-50">Untertypwohnform</td>
-					<td class="w-50"><n:apartmenttype apartmentuid='{object.apartmentType}' /></td>
+					<td class="w-50"><n:apartmentType apartmentuid='{object.apartmentType}' /></td>
 				</tr>
 			</tbody> 	
 		</table>
