--- a/Resources/Private/Templates/RealtyManager/List.html
+++ b/Resources/Private/Templates/RealtyManager/List.html
@@ -22,14 +22,14 @@
 		</div>
 		<div class="row mt-3 mb-3">
 			<div class="col row_feature_icons">
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/barrierefrei-inaktiv.png')}" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/tv-inaktiv.png')}" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/moeblierung-inaktiv.png')}" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/reinigung-inaktiv.png')}" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/bike-inaktiv.png')}" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/waschmaschine-inaktiv.png')}" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/kueche-inaktiv.png')}" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/zusatzkosten-inaktiv.png')}" /></div>
+				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/barrierefrei-inaktiv.png')}" alt="rollstuhlgerecht" title="rollstuhlgerecht" /></div>
+				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/tv-inaktiv.png')}" alt="TV-Anschluss" title="TV-Anschluss" /></div>
+				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/moeblierung-inaktiv.png')}" alt="Möbiliert" title="Möbiliert" /></div>
+				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/reinigung-inaktiv.png')}" alt="Hausreingung" title="Hausreingung" /></div>
+				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/bike-inaktiv.png')}" alt="Fahrradraum" title="Fahrradraum" /></div>
+				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/waschmaschine-inaktiv.png')}" alt="Waschmaschinenraum" title="Waschmaschinenraum" /></div>
+				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/kueche-inaktiv.png')}" alt="Einbauküche" title="Einbauküche" /></div>
+				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/zusatzkosten-inaktiv.png')}" alt="keine Zusatzkosten" title="keine Zusatzkosten" /></div>
 			</div>
 		</div>
 	</div>
