--- a/Resources/Private/Templates/RealtyManager/Detail.html
+++ b/Resources/Private/Templates/RealtyManager/Detail.html
@@ -52,7 +52,7 @@
 		 	<n:city cityuid='{object.city}' /> 
 		 	<f:if condition="{object.district} > '0'">
 				<f:then>
-					(<n:district districtuid='{object.district}' />)
+					- <n:district districtuid='{object.district}' />
 				</f:then>
 			</f:if>
 	 	</p>
