--- a/Resources/Private/Templates/RealtyManager/List.html
+++ b/Resources/Private/Templates/RealtyManager/List.html
@@ -22,14 +22,86 @@
 		</div>
 		<div class="row mt-3 mb-3">
 			<div class="col row_feature_icons">
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/barrierefrei-inaktiv.png')}" alt="rollstuhlgerecht" title="rollstuhlgerecht" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/tv-inaktiv.png')}" alt="TV-Anschluss" title="TV-Anschluss" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/moeblierung-inaktiv.png')}" alt="Möbiliert" title="Möbiliert" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/reinigung-inaktiv.png')}" alt="Hausreingung" title="Hausreingung" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/bike-inaktiv.png')}" alt="Fahrradraum" title="Fahrradraum" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/waschmaschine-inaktiv.png')}" alt="Waschmaschinenraum" title="Waschmaschinenraum" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/kueche-inaktiv.png')}" alt="Einbauküche" title="Einbauküche" /></div>
-				<div class="feature_icons"><img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/zusatzkosten-inaktiv.png')}" alt="keine Zusatzkosten" title="keine Zusatzkosten" /></div>
+				<div class="feature_icons">
+					<f:if condition="{object.barrier_free} > '0'">
+						<f:then>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/barrierefrei-aktiv.png')}" alt="rollstuhlgerecht" title="rollstuhlgerecht" />
+						</f:then>
+						<f:else>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/barrierefrei-inaktiv.png')}" alt="rollstuhlgerecht" title="rollstuhlgerecht" />					
+						</f:else>
+					</f:if>
+				</div>
+				<div class="feature_icons">
+					<f:if condition="{object.tv_enabled} > '0'">
+						<f:then>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/tv-aktiv.png')}" alt="TV-Anschluss" title="TV-Anschluss" />
+						</f:then>
+						<f:else>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/tv-inaktiv.png')}" alt="TV-Anschluss" title="TV-Anschluss" />					
+						</f:else>
+					</f:if>					
+				</div>
+				<div class="feature_icons">
+					<f:if condition="{object.furnished} > '0'">
+						<f:then>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/moeblierung-aktiv.png')}" alt="Möbiliert" title="Möbiliert" />
+						</f:then>
+						<f:else>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/moeblierung-inaktiv.png')}" alt="Möbiliert" title="Möbiliert" />					
+						</f:else>
+					</f:if>	
+				</div>
+				<div class="feature_icons">
+					<f:if condition="{object.cleaning} > '0'">
+						<f:then>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/reinigung-aktiv.png')}" alt="Hausreingung" title="Hausreingung" />
+						</f:then>
+						<f:else>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/reinigung-inaktiv.png')}" alt="Hausreingung" title="Hausreingung" />					
+						</f:else>
+					</f:if>					
+				</div>
+				<div class="feature_icons">
+					<f:if condition="{object.bicycleroom} > '0'">
+						<f:then>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/bike-aktiv.png')}" alt="Fahrradraum" title="Fahrradraum" />
+						</f:then>
+						<f:else>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/bike-inaktiv.png')}" alt="Fahrradraum" title="Fahrradraum" />					
+						</f:else>
+					</f:if>	
+				</div>
+				<div class="feature_icons">
+					<f:if condition="{object.washingroom} > '0'">
+						<f:then>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/waschmaschine-aktiv.png')}" alt="Waschmaschinenraum" title="Waschmaschinenraum" />
+						</f:then>
+						<f:else>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/waschmaschine-inaktiv.png')}" alt="Waschmaschinenraum" title="Waschmaschinenraum" />					
+						</f:else>
+					</f:if>
+				</div>
+				<div class="feature_icons">
+					<f:if condition="{object.fitted_kitchen} > '0'">
+						<f:then>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/kueche-aktiv.png')}" alt="Einbauküche" title="Einbauküche" />
+						</f:then>
+						<f:else>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/kueche-inaktiv.png')}" alt="Einbauküche" title="Einbauküche" />					
+						</f:else>
+					</f:if>
+				</div>
+				<div class="feature_icons">
+					<f:if condition="{object.provision}">
+						<f:then>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/zusatzkosten-aktiv.png')}" alt="keine Zusatzkosten" title="keine Zusatzkosten" />
+						</f:then>
+						<f:else>
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/zusatzkosten-inaktiv.png')}" alt="keine Zusatzkosten" title="keine Zusatzkosten" />					
+						</f:else>
+					</f:if>
+				</div>
 			</div>
 		</div>
 	</div>
