--- a/Resources/Private/Templates/RealtyManager/List.html
+++ b/Resources/Private/Templates/RealtyManager/List.html
@@ -106,7 +106,11 @@
 		</div>
 	</div>
 	<div class="col-lg-3">
-		Bilder
+		<f:link.action action="detail" arguments="{objUid : object.uid}">
+			<div class="preview-img">
+				<f:format.html><n:imageList object='{object.uid}' /></f:format.html>
+			</div>
+		</f:link.action>
 	</div>
 </div>
 </f:for>
