--- a/Resources/Private/Templates/RealtyManager/Detail.html
+++ b/Resources/Private/Templates/RealtyManager/Detail.html
@@ -5,9 +5,11 @@
 <div class="row detail-immo-row">
 	<div class="col-sm-8">
 		<h3>{object.title} <span style="font-size: 12px">(uid: {object.uid})</span></h3>
-		<div class="row bg-light mt-3 mb-4" style="height: 100px;">
-			<div class="col">
-				<h2>Slider</h2>
+		<div class="row bg-light mt-3 mb-4" style="min-height: 100px;">
+			<div class="col detail-img">
+				<f:for each="{images}" as="image" iteration="iterator">
+				   <img src="fileadmin/{image.identifier}" width="128"/> 
+				</f:for>
 			</div>
 		</div>
 		<table class="table table-striped table-bordered">
