--- a/Resources/Private/Templates/RealtyManager/Detail.html
+++ b/Resources/Private/Templates/RealtyManager/Detail.html
@@ -82,5 +82,5 @@
 	</div>
 </div>
 <hr />
-<f:link.action class="btn btn-default btn-sm" action="list"><< zurück</f:link.action></p>
+<f:link.action pageUid="13" class="btn btn-default btn-sm" action="list"><< zurück</f:link.action></p>
 </html>
