--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -3,6 +3,16 @@
 
 <f:form action="list" pageUid="13" id="searchform" controller="RealtyManager">
 	<div class="form-group">
+		<label for="employer">Anbieter</label>
+	    <f:form.select name="employer"  class="form-control form-control-sm" options="{employers}" optionValueField="key" optionLabelField="value" value="{employer}" />
+	</div>
+	<div id="ajaxSelectDistrictResult">	
+		<div class="form-group">
+			<label for="district">Stadtteil</label>
+		    <f:form.select name="district" class="form-control form-control-sm" options="{districts}" optionValueField="key" optionLabelField="value" value="{district}" />
+		</div>
+	</div>
+	<div class="form-group">
 		<label for="city">Stadt</label>
 	    <f:form.select name="city"  class="form-control form-control-sm select-city" options="{cities}" optionValueField="key" optionLabelField="value" value="{city}" />
 	</div>
