--- a/Resources/Private/Templates/RealtyManager/Detail.html
+++ b/Resources/Private/Templates/RealtyManager/Detail.html
@@ -5,13 +5,7 @@
 <div class="row detail-immo-row">
 	<div class="col-sm-8">
 		<h3><span class="font-weight-bolder">{object.title} </span><span style="font-size: 12px">(uid: {object.uid})</span></h3>
-		<div class="row bg-light mt-3 mb-4" style="min-height: 100px;">
-			<div class="col detail-img">
-				<f:for each="{images}" as="image" iteration="iterator">
-				   <img src="fileadmin/{image.identifier}" width="128"/> 
-				</f:for>
-			</div>
-		</div>
+		<f:render partial="Media/Gallery" arguments="{_all}" />
 		<table class="table table-striped table-bordered">
 			<thead>
 				<tr>
