--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -1,7 +1,7 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
-<f:form action="list" pageUid="13" id="searchform" controller="RealtyManager">
+<f:form action="search" pageUid="13" id="searchform" controller="RealtyManager">
 	<div class="form-group">
 		<label for="employer">Anbieter</label>
 	    <f:form.select name="employer"  class="form-control form-control-sm" options="{employers}" optionValueField="key" optionLabelField="value" value="{employer}" />
