fix search utf8

--- a/Resources/Private/Templates/RealtyManager/Search.html
+++ b/Resources/Private/Templates/RealtyManager/Search.html
@@ -16,7 +16,7 @@
 		   <f:format.html><f:format.crop maxCharacters="200">{object.teaser}</f:format.crop></f:format.html>
 		</div>
 		<div class="row list-details">
-			<div class="col w-25">{object.living_area} m²</div>
+			<div class="col w-25">{object.living_area} mÂ²</div>
 			<div class="col">Kaltmiete: {object.rent_excluding_bills} EUR</div>
 			<div class="col">Nebenkosten: {object.extra_charges} EUR</div>
 		</div>
@@ -45,10 +45,10 @@
 				<div class="feature_icons">
 					<f:if condition="{object.furnished} > '0'">
 						<f:then>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/moeblierung-aktiv.png')}" alt="Möbiliert" title="Möbiliert" />
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/moeblierung-aktiv.png')}" alt="Mï¿½biliert" title="Mï¿½biliert" />
 						</f:then>
 						<f:else>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/moeblierung-inaktiv.png')}" alt="Möbiliert" title="Möbiliert" />					
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/moeblierung-inaktiv.png')}" alt="Mï¿½biliert" title="Mï¿½biliert" />					
 						</f:else>
 					</f:if>	
 				</div>
@@ -85,10 +85,10 @@
 				<div class="feature_icons">
 					<f:if condition="{object.fitted_kitchen} > '0'">
 						<f:then>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/kueche-aktiv.png')}" alt="Einbauküche" title="Einbauküche" />
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/kueche-aktiv.png')}" alt="Einbaukï¿½che" title="Einbaukï¿½che" />
 						</f:then>
 						<f:else>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/kueche-inaktiv.png')}" alt="Einbauküche" title="Einbauküche" />					
+							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/kueche-inaktiv.png')}" alt="Einbaukï¿½che" title="Einbaukï¿½che" />					
 						</f:else>
 					</f:if>
 				</div>
