prepare form (range)

--- a/Resources/Private/Templates/RealtyManager/Detail.html
+++ b/Resources/Private/Templates/RealtyManager/Detail.html
@@ -76,5 +76,5 @@
 	</div>
 </div>
 <hr />
-<f:link.action pageUid="13" class="btn btn-default btn-sm" action="list"><< zurück</f:link.action></p>
+<input type="button" class="btn btn-default btn-sm" value="<< zurück" onclick="history.back()">
 </html>
