--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -30,11 +30,11 @@
 	<div class="form-group">
 		<label class="label-radio" for="kitchen">Küche vorhanden</label>
 		<div class="form-check form-check-inline">
-  			<f:form.radio name="kitchen" id="kitchen1"class="form-check-input" value="1" />
+  			<f:form.radio name="fitted_kitchen" id="kitchen1"class="form-check-input" value="1" />
   			<label class="form-check-label" for="kitchen1">ja</label>
 		</div>
 		<div class="form-check form-check-inline">
-  			<f:form.radio name="kitchen" id="kitchen2"class="form-check-input" checked="checked" value="0" />
+  			<f:form.radio name="fitted_kitchen" id="kitchen2"class="form-check-input" checked="checked" value="0" />
   			<label class="form-check-label" for="kitchen2">egal</label>
 		</div>
 	</div>
@@ -52,49 +52,50 @@
 	<div class="form-group">
 		<label class="label-radio" for="cleanservice">Hausreinigung</label>
 		<div class="form-check form-check-inline">
-  			<f:form.radio name="cleanservice" id="cleanservice1"class="form-check-input" value="1" />
+  			<f:form.radio name="cleaning" id="cleanservice1"class="form-check-input" value="1" />
   			<label class="form-check-label" for="cleanservice1">ja</label>
 		</div>
 		<div class="form-check form-check-inline">
-  			<f:form.radio name="cleanservice" id="cleanservice2"class="form-check-input" checked="checked" value="0" />
+  			<f:form.radio name="cleaning" id="cleanservice2"class="form-check-input" checked="checked" value="0" />
   			<label class="form-check-label" for="cleanservice2">egal</label>
 		</div>
 	</div>
 	<div class="form-group">
 		<label class="label-radio" for="bike_room">Fahrradraum</label>
 		<div class="form-check form-check-inline">
-  			<f:form.radio name="bike_room" id="bike_room1"class="form-check-input" value="1" />
+  			<f:form.radio name="bicycleroom" id="bike_room1"class="form-check-input" value="1" />
   			<label class="form-check-label" for="bike_room1">ja</label>
 		</div>
 		<div class="form-check form-check-inline">
-  			<f:form.radio name="bike_room" id="bike_room2"class="form-check-input" checked="checked" value="0" />
+  			<f:form.radio name="bicycleroom" id="bike_room2"class="form-check-input" checked="checked" value="0" />
   			<label class="form-check-label" for="bike_room2">egal</label>
 		</div>
 	</div>
 	<div class="form-group">
 		<label class="label-radio" for="washroom">Waschmaschinenraum</label>
 		<div class="form-check form-check-inline">
-  			<f:form.radio name="washroom" id="washroom1"class="form-check-input" value="1" />
+  			<f:form.radio name="washingroom" id="washroom1"class="form-check-input" value="1" />
   			<label class="form-check-label" for="washroom1">ja</label>
 		</div>
 		<div class="form-check form-check-inline">
-  			<f:form.radio name="washroom" id="washroom2"class="form-check-input" checked="checked" value="0" />
+  			<f:form.radio name="washingroom" id="washroom2"class="form-check-input" checked="checked" value="0" />
   			<label class="form-check-label" for="washroom2">egal</label>
 		</div>
 	</div>
+	
 	<div class="form-group">
 		<label for="rent">Miete:</label><br />
 		<span style="padding-left: 5px; padding-right: 5px;">von:</span>
 		<f:form.select name="rent_from" class="selectcol" options="{rentprices}" optionValueField="key" optionLabelField="value" value="{rent_from}" />
 		<span style="padding-left: 5px; padding-right: 5px;">bis:</span>
-		<f:form.select name="rent_to" class="selectcol" options="{rentprices}" optionValueField="key" optionLabelField="value" value="{rent_to}" />
+		<f:form.select name="rent_to" class="selectcol" options="{rentprices}" optionValueField="key" optionLabelField="value" value="{price_last}" />
 	</div>
 	<div class="form-group">
 		<label for="living_area">Mietfläche:</label><br />
 		<span style="padding-left: 5px; padding-right: 5px;">von:</span>
 		<f:form.select name="living_area_from" class="selectcol" options="{areas}" optionValueField="key" optionLabelField="value" value="{living_area_from}" />
 		<span style="padding-left: 5px; padding-right: 5px;">bis:</span>
-		<f:form.select name="living_area_to" class="selectcol" options="{areas}" optionValueField="key" optionLabelField="value" value="{living_area_to}" />
+		<f:form.select name="living_area_to" class="selectcol" options="{areas}" optionValueField="key" optionLabelField="value" value="{area_last}" />
 	</div>
 	<div class="form-group">
 		<f:form.submit class="f-submit" value="Suchen" />
