--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -84,7 +84,7 @@
 	</div>
 	
 	<div class="form-group">
-		<label for="rent">Miete:</label><br />
+		<label for="rent">Kaltmiete:</label><br />
 		<span style="padding-left: 5px; padding-right: 5px;">von:</span>
 		<f:form.select name="rent_from" class="selectcol" options="{rentprices}" optionValueField="key" optionLabelField="value" value="{rent_from}" />
 		<span style="padding-left: 5px; padding-right: 5px;">bis:</span>
