--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -3,6 +3,14 @@
 
 <f:form action="search" pageUid="13" id="searchform" controller="RealtyManager">
 	<div class="form-group">
+		<label for="house_type">Wohnform</label>
+	    <f:form.select name="house_type"  class="form-control form-control-sm" options="{housetypes}" optionValueField="key" optionLabelField="value" value="{house_type}" />
+	</div>
+	<div class="form-group">
+		<label for="apartment_type">Untertypwohnform</label>
+	    <f:form.select name="apartment_type"  class="form-control form-control-sm select-city" options="{apartmenttypes}" optionValueField="key" optionLabelField="value" value="{apartment_type}" />
+	</div>
+	<div class="form-group">
 		<label for="employer">Anbieter</label>
 	    <f:form.select name="employer"  class="form-control form-control-sm" options="{employers}" optionValueField="key" optionLabelField="value" value="{employer}" />
 	</div>
