--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -110,6 +110,6 @@
 	</div>
 </f:form>
 
-<f:asset.script identifier="ajax_select" src="EXT:realty_manager/Resources/Public/JavaScript/Ajax.js" />
+<f:asset.script identifier="ajax_form" src="EXT:realty_manager/Resources/Public/JavaScript/Ajax.js" />
 	
 </html>
