--- a/Resources/Private/Templates/RealtyManager/List.html
+++ b/Resources/Private/Templates/RealtyManager/List.html
@@ -3,7 +3,7 @@
       data-namespace-typo3-fluid="true">
 
 <h2>Wir bieten Dir folgende Objekte an:</h2><br />
-
+<div class="ajax-loading"><img src="fileadmin/layout/images/ajax-loader-3.gif" /></div>
 <div id="ajaxSearchResult">	
 	<f:for each="{objects}" as="object">
 	<div class="row list-immo-row">
