--- a/Resources/Private/Templates/Ajaxsearch.html
+++ b/Resources/Private/Templates/Ajaxsearch.html
@@ -1,4 +1,4 @@
-
+{namespace myhelper=ChrisGruen\RealtyManager\ViewHelpers}
 <f:for each="{objects}" as="object">
 <div class="row list-immo-row">
 	<div class="col-lg-9">
@@ -6,6 +6,7 @@
 		   <span class="font-weight-bold">{object.title}</span>
 		</f:link.action>
 		<br />
+		<myhelper:feature object='{object.uid}' />
 		<div class="list-teaser">
 		   <f:format.html><f:format.crop maxCharacters="200">{object.teaser}</f:format.crop></f:format.html>
 		</div>
@@ -102,7 +103,7 @@
 	<div class="col-lg-3">
 		<f:link.action pageUid="25" action="detail" arguments="{objUid : object.uid}">
 			<div class="preview-img">
-				
+				<f:format.html><myhelper:imageList object='{object.uid}' /></f:format.html>	
 			</div>
 		</f:link.action>
 	</div>
