--- a/Resources/Private/Templates/RealtyManager/List.html
+++ b/Resources/Private/Templates/RealtyManager/List.html
@@ -14,7 +14,7 @@
 			<br />
 			<n:feature object='{object.uid}' />
 			<div class="list-teaser">
-			   <f:format.html><f:format.crop maxCharacters="200">{object.teaser}</f:format.crop></f:format.html>
+			   <f:format.html>{object.teaser}</f:format.html>
 			</div>
 			<div class="row list-details">
 				<div class="col w-25">{object.living_area} m²</div>
