--- a/Resources/Private/Templates/Ajaxsearch.html
+++ b/Resources/Private/Templates/Ajaxsearch.html
@@ -8,7 +8,7 @@
 		<br />
 		<myhelper:feature object='{object.uid}' />
 		<div class="list-teaser">
-		   <f:format.html><f:format.crop maxCharacters="200">{object.teaser}</f:format.crop></f:format.html>
+		   <f:format.html>{object.teaser}</f:format.html>
 		</div>
 		<div class="row list-details">
 			<div class="col w-25">{object.living_area} m²</div>
