backend import prepare 1

--- a/Resources/Private/Templates/Import/Index.html
+++ b/Resources/Private/Templates/Import/Index.html
@@ -6,6 +6,19 @@
 
 
 <f:section name="content">
-    <h2>Immobilien Import</h1>
+    <h1>
+    	<f:translate key="LLL:EXT:realty_manager/Resources/Private/Language/locallang_mod.xlf:import_tab"/>
+	</h1>
+	<p class="lead">
+    	<f:translate key="LLL:EXT:realty_manager/Resources/Private/Language/locallang_mod.xlf:mlang_labels_tabdescr"/>
+	</p>
+	
+	<f:form action="import" class="js-realty-import-form">
+    <p>
+        <button class="btn btn-lg btn-primary">
+            <f:translate key="LLL:EXT:realty_manager/Resources/Private/Language/locallang_mod.xlf:start_import_button"/>
+        </button>
+    </p>
+</f:form>
 </f:section>
 </html>
