--- a/Resources/Private/Templates/Import/Index.html
+++ b/Resources/Private/Templates/Import/Index.html
@@ -1,24 +1,8 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
-	  data-namespace-typo3-fluid="true">
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 	  
-
 <f:layout name="Backend/Default" />
 
-
 <f:section name="content">
-    <h1>
-    	<f:translate key="LLL:EXT:realty_manager/Resources/Private/Language/locallang_mod.xlf:import_tab"/>
-	</h1>
-	<p class="lead">
-    	<f:translate key="LLL:EXT:realty_manager/Resources/Private/Language/locallang_mod.xlf:mlang_labels_tabdescr"/>
-	</p>
-	
-	<f:form action="import" class="js-realty-import-form">
-    <p>
-        <button class="btn btn-lg btn-primary">
-            <f:translate key="LLL:EXT:realty_manager/Resources/Private/Language/locallang_mod.xlf:start_import_button"/>
-        </button>
-    </p>
-</f:form>
+    <f:render partial="OpenImmo/StartImportForm"/>
 </f:section>
 </html>
