backend impprt list company

--- a/Resources/Private/Templates/Import/Index.html
+++ b/Resources/Private/Templates/Import/Index.html
@@ -10,6 +10,12 @@
 	<p class="lead">
 	    <f:translate key="LLL:EXT:realty_manager/Resources/Private/Language/locallang_mod.xlf:mlang_labels_tabdescr"/>
 	</p>
+	
+	<p>
+	    <f:for each="{employers}" as="employer">
+	    	{employer.company} <br />
+	    </f:for>
+	</p>
 	<f:if condition="{error}">
 		<f:then>
 		    <div class="alert alert-danger">
