clear after import

--- a/Resources/Private/Partials/OpenImmo/StartImportForm.html
+++ b/Resources/Private/Partials/OpenImmo/StartImportForm.html
@@ -4,7 +4,7 @@
     	<f:form.select name="employer"  class="form-control form-control-sm select-employer" options="{employers}" optionValueField="key" optionLabelField="value" value="{employer}" />
 	</div>
     <p>
-        <button class="btn btn-lg btn-primary">
+        <button class="btn btn-lg btn-primary start-import">
             <f:translate key="LLL:EXT:realty_manager/Resources/Private/Language/locallang_mod.xlf:start_import_button"/>
         </button>
     </p>
