clear attachement, list item

--- a/Resources/Private/Templates/Ajaxsearch.html
+++ b/Resources/Private/Templates/Ajaxsearch.html
@@ -1,111 +1,4 @@
 {namespace myhelper=ChrisGruen\RealtyManager\ViewHelpers}
 <f:for each="{objects}" as="object">
-<div class="row list-immo-row">
-	<div class="col-lg-9">
-		<f:link.action pageUid="25" action="detail" arguments="{objUid : object.uid}">
-		   <span class="font-weight-bold">{object.title}</span>
-		</f:link.action>
-		<br />
-		<myhelper:feature object='{object.uid}' />
-		<div class="list-teaser">
-		   <f:format.html>{object.teaser}</f:format.html>
-		</div>
-		<div class="row list-details">
-			<div class="col w-25">{object.living_area} m²</div>
-			<div class="col">Kaltmiete: {object.rent_excluding_bills} EUR</div>
-			<div class="col">Nebenkosten: {object.extra_charges} EUR</div>
-		</div>
-		<div class="row mt-3 mb-3">
-			<div class="col row_feature_icons">
-				<div class="feature_icons">
-					<f:if condition="{object.barrier_free} > '0'">
-						<f:then>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/barrierefrei-aktiv.png')}" alt="rollstuhlgerecht" title="rollstuhlgerecht" />
-						</f:then>
-						<f:else>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/barrierefrei-inaktiv.png')}" alt="rollstuhlgerecht" title="rollstuhlgerecht" />					
-						</f:else>
-					</f:if>
-				</div>
-				<div class="feature_icons">
-					<f:if condition="{object.tv_enabled} > '0'">
-						<f:then>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/tv-aktiv.png')}" alt="TV-Anschluss" title="TV-Anschluss" />
-						</f:then>
-						<f:else>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/tv-inaktiv.png')}" alt="TV-Anschluss" title="TV-Anschluss" />					
-						</f:else>
-					</f:if>					
-				</div>
-				<div class="feature_icons">
-					<f:if condition="{object.furnished} > '0'">
-						<f:then>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/moeblierung-aktiv.png')}" alt="Möbiliert" title="Möbiliert" />
-						</f:then>
-						<f:else>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/moeblierung-inaktiv.png')}" alt="Möbiliert" title="Möbiliert" />					
-						</f:else>
-					</f:if>	
-				</div>
-				<div class="feature_icons">
-					<f:if condition="{object.cleaning} > '0'">
-						<f:then>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/reinigung-aktiv.png')}" alt="Hausreingung" title="Hausreingung" />
-						</f:then>
-						<f:else>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/reinigung-inaktiv.png')}" alt="Hausreingung" title="Hausreingung" />					
-						</f:else>
-					</f:if>					
-				</div>
-				<div class="feature_icons">
-					<f:if condition="{object.bicycleroom} > '0'">
-						<f:then>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/bike-aktiv.png')}" alt="Fahrradraum" title="Fahrradraum" />
-						</f:then>
-						<f:else>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/bike-inaktiv.png')}" alt="Fahrradraum" title="Fahrradraum" />					
-						</f:else>
-					</f:if>	
-				</div>
-				<div class="feature_icons">
-					<f:if condition="{object.washingroom} > '0'">
-						<f:then>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/waschmaschine-aktiv.png')}" alt="Waschmaschinenraum" title="Waschmaschinenraum" />
-						</f:then>
-						<f:else>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/waschmaschine-inaktiv.png')}" alt="Waschmaschinenraum" title="Waschmaschinenraum" />					
-						</f:else>
-					</f:if>
-				</div>
-				<div class="feature_icons">
-					<f:if condition="{object.fitted_kitchen} > '0'">
-						<f:then>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/kueche-aktiv.png')}" alt="Einbauküche" title="Einbauküche" />
-						</f:then>
-						<f:else>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/kueche-inaktiv.png')}" alt="Einbauküche" title="Einbauküche" />					
-						</f:else>
-					</f:if>
-				</div>
-				<div class="feature_icons">
-					<f:if condition="{object.provision}">
-						<f:then>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/zusatzkosten-aktiv.png')}" alt="keine Zusatzkosten" title="keine Zusatzkosten" />
-						</f:then>
-						<f:else>
-							<img src="{f:uri.image(src: 'EXT:realty_manager/Resources/Public/Icons/zusatzkosten-inaktiv.png')}" alt="keine Zusatzkosten" title="keine Zusatzkosten" />					
-						</f:else>
-					</f:if>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="col-lg-3">
-		<f:link.action pageUid="25" action="detail" arguments="{objUid : object.uid}">
-			<div class="preview-img">
-				<f:format.html><myhelper:imageList object='{object.uid}' /></f:format.html>	
-			</div>
-		</f:link.action>
-	</div>
-</div>
+	<f:render partial="List/Item" arguments="{_all}" />
 </f:for>
