--- a/Resources/Private/Templates/RealtyManager/List.html
+++ b/Resources/Private/Templates/RealtyManager/List.html
@@ -2,12 +2,31 @@
 	  xmlns:n="http://typo3.org/ns/ChrisGruen/RealtyManager/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
-<h2>Wir bieten Dir folgende Objekte an:</h2><br />
+<h3>Wir bieten Dir folgende Objekte an:</h3>
 <div class="ajax-loading"><img src="fileadmin/layout/images/ajax-loader-3.gif" /></div>
 <div id="ajaxSearchResult">
-	<f:for each="{objects}" as="object">
-		<f:render partial="List/Item" arguments="{_all}" />
-	</f:for>
+	<div class="show-count-obj"> ({count_objects} objekte)</div>
+	<f:if condition="{objects}">
+		<f:then>
+			<f:if condition="{objects -> f:count()} > 3">
+				<f:then>
+					<f:widget.paginate objects="{objects}" as="subObjects" configuration="{itemsPerPage: 3, insertAbove: 1, insertBelow: 1, maximumNumberOfLinks: 5}">
+						<f:for each="{subObjects}" as="object">
+							<f:render partial="List/Item" arguments="{_all}" />
+						</f:for>
+					</f:widget.paginate>
+				</f:then>
+				<f:else>
+					<f:for each="{objects}" as="object">
+						<f:render partial="List/Item" arguments="{_all}" />
+					</f:for>
+				</f:else>
+			</f:if>
+		</f:then>
+		<f:else>
+			Keine Objekte vorhanden!
+		</f:else>
+	</f:if>
 </div>
 	
 </html>
