--- a/Resources/Private/Templates/RealtyManager/Detail.html
+++ b/Resources/Private/Templates/RealtyManager/Detail.html
@@ -5,7 +5,7 @@
 <div class="row detail-immo-row">
 	<div class="col-sm-8">
 		<h3><span class="font-weight-bolder">{object.title} </span><span style="font-size: 12px">(uid: {object.uid})</span></h3>
-		<f:render partial="Media/Gallery" arguments="{_all}" />
+		<f:render partial="Media/Slider" arguments="{_all}" />
 		<table class="table table-striped table-bordered">
 			<thead>
 				<tr>
