ajax paging dev

--- a/Resources/Private/Templates/RealtyManager/List.html
+++ b/Resources/Private/Templates/RealtyManager/List.html
@@ -8,7 +8,7 @@
 	<div class="show-count-obj {itemsPerPage}"> ({count_objects} objekte)</div>
 	<f:if condition="{objects}">
 		<f:then>
-			<f:if condition="{objects -> f:count()} > 3">
+			<f:if condition="{objects -> f:count()} > {itemsPerPage}">
 				<f:then>
 					<f:widget.paginate objects="{objects}" as="subObjects" configuration="{itemsPerPage: itemsPerPage, insertAbove: 1, insertBelow: 1, maximumNumberOfLinks: 5}">
 						<f:for each="{subObjects}" as="object">
