--- a/Resources/Private/Templates/Ajaxsearch.html
+++ b/Resources/Private/Templates/Ajaxsearch.html
@@ -4,7 +4,34 @@
 		<div class="show-count-obj"> ({count_objects} objekte)</div>
 	</div>
 </div>
-<f:for each="{objects}" as="object">
-	<f:render partial="List/Item" arguments="{_all}" />
-</f:for>
+<f:if condition="{objects}">
+	<f:then>
+		<f:if condition="{ajaxPaging}">
+			<f:then>
+				<f:if condition="{objects -> f:count()} > {itemsPerPage}">
+					<f:then>
+						<f:widget.paginate objects="{objects}" as="subObjects" configuration="{itemsPerPage: itemsPerPage, insertAbove: 1, insertBelow: 1, maximumNumberOfLinks: 5}">
+							<f:for each="{subObjects}" as="object">
+								<f:render partial="List/Item" arguments="{_all}" />
+							</f:for>
+						</f:widget.paginate>
+					</f:then>
+					<f:else>
+						<f:for each="{objects}" as="object">
+							<f:render partial="List/Item" arguments="{_all}" />
+						</f:for>
+					</f:else>
+				</f:if>
+			</f:then>
+			<f:else>
+				<f:for each="{objects}" as="object">
+					<f:render partial="List/Item" arguments="{_all}" />
+				</f:for>
+			</f:else>
+		</f:if>
+	</f:then>
+	<f:else>
+		Keine Objekte vorhanden!
+	</f:else>
+</f:if>
 <f:asset.script identifier="AjaxPagination" src="EXT:realty_manager/Resources/Public/JavaScript/AjaxPagination.js" />
