--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -1,6 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       data-namespace-typo3-fluid="true">
-<h3>Suchkriterien</h3>
+<h3>Suchkriterien</h3><br />
 <f:form action="search" pageUid="13" id="searchform" controller="RealtyManager">
 	<div class="form-group">
 		<label for="house_type">Wohnform</label>
