--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -4,7 +4,7 @@
 <f:form action="search" pageUid="13" id="searchform" controller="RealtyManager">
 	<div class="form-group">
 		<label for="house_type">Wohnform</label>
-	    <f:form.select name="house_type"  class="form-control form-control-sm" options="{housetypes}" optionValueField="key" optionLabelField="value" value="{house_type}" />
+	    <f:form.select name="house_type"  class="form-control form-control-sm" options="{housetypes}" optionValueField="key" optionLabelField="value" value="{search.house_type}" />
 	</div>
 	<div class="form-group">
 		<label for="apartment_type">Untertypwohnform</label>
@@ -94,14 +94,14 @@
 	<div class="form-group">
 		<label for="rent">Kaltmiete:</label><br />
 		<span style="padding-left: 5px; padding-right: 5px;">von:</span>
-		<f:form.select name="rent_from" class="selectcol" options="{rentprices}" optionValueField="key" optionLabelField="value" value="{rent_from}" />
+		<f:form.select name="rent_from" class="selectcol" options="{rentprices}" optionValueField="key" optionLabelField="value" value="{search.rent_from}" />
 		<span style="padding-left: 5px; padding-right: 5px;">bis:</span>
 		<f:form.select name="rent_to" class="selectcol" options="{rentprices}" optionValueField="key" optionLabelField="value" value="{price_last}" />
 	</div>
 	<div class="form-group">
 		<label for="living_area">Mietfläche:</label><br />
 		<span style="padding-left: 5px; padding-right: 5px;">von:</span>
-		<f:form.select name="living_area_from" class="selectcol" options="{areas}" optionValueField="key" optionLabelField="value" value="{living_area_from}" />
+		<f:form.select name="living_area_from" class="selectcol" options="{areas}" optionValueField="key" optionLabelField="value" value="{search.living_area_from}" />
 		<span style="padding-left: 5px; padding-right: 5px;">bis:</span>
 		<f:form.select name="living_area_to" class="selectcol" options="{areas}" optionValueField="key" optionLabelField="value" value="{area_last}" />
 	</div>
